<resources>
    <string name="wattUnit" translatable="false">%1$dW</string>
    <string name="watt500" translatable="false">500W</string>
    <string name="watt600" translatable="false">600W</string>
    <string name="watt" translatable="false">W</string>
    <string name="app_name">Microwave Calculator</string>
    <string name="tvBefore">Recipe</string>
    <string name="tvAfter">Power of microwave</string>
    <string name="select">Select</string>
    <string name="setPreset">Preset%1$d was set to %2$dW.</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>
    <string name="result">%1$dm%2$ds</string>
    <string name="presetHint">You can preset wattage when tap the button for long time.</string>
    <string name="tip_register_watt">Long-press a button to save the current wattage as its preset.</string>
    <string name="button_help">How to configure buttons?</string>
    <string name="button_close">Close</string>
</resources>